# TripletLoc

./: CMakeLists.txt  README.md  package.xml
config/: config_generate_maps.rviz  config_generate_maps.yaml  config_tripletloc.rviz  config_tripletloc.yaml  preprocoss_filter_pc_heliper.rviz
config/configs_for_baselines/: config_tripletgraph.rviz  config_tripletgraph.yaml
include/: CostFunction.h  Point2PointFactor.h  TripletLoc.h  tic_toc.h  tripletgraph.h
include/nanoflann/: KDTreeVectorOfVectorsAdaptor.h
include/teaser/: graph.h  registration.h
launch/: baseline_tripletgraph.launch  generate_maps.launch  preprocess_filter_pc_heliper.launch  tripletloc.launch
src/: TripletLoc.cpp  TripletLoc_generate_maps.cpp  TripletLoc_node.cpp  baseline_TripletGraph.cpp  preprocoss_filter_pc_heliper.cpp  tripletgraph.cpp
src/teaser/: graph.cc  registration.cc
test_data/maps/Bridge01/RSN/: road_normal.txt
test_data/maps/Bridge01/instances/: 15.txt  17.txt  18.txt
test_data/maps/DCC04/RSN/: road_normal.txt
test_data/maps/DCC04/instances/: 15.txt  17.txt  18.txt
test_data/maps/KAIST04/RSN/: road_normal.txt
test_data/maps/KAIST04/instances/: 15.txt  17.txt  18.txt
test_data/maps/Riverside04/RSN/: road_normal.txt
test_data/maps/Riverside04/instances/: 15.txt  17.txt  18.txt
test_data/maps/Roundabout01/RSN/: road_normal.txt
test_data/maps/Roundabout01/instances/: 15.txt  17.txt  18.txt
test_data/maps/Town01/RSN/: road_normal.txt
test_data/maps/Town01/instances/: 15.txt  17.txt  18.txt
